# nextword

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: data-format.md  field-guidelines.md  template.md
docs/superpowers/plans/: 2026-05-10-cli-word-list.md  2026-05-26-mochi-cards-generation.md  2026-05-27-mochi-upload.md  2026-06-10-mochi-loaded-highlight.md  2026-06-10-pipeline-autorun-after-save.md  2026-06-13-tui-frequency-bar.md
docs/superpowers/specs/: 2026-05-10-cli-word-list-design.md  2026-05-26-mochi-cards-generation-design.md  2026-05-27-mochi-upload-design.md  2026-06-10-mochi-loaded-highlight-design.md  2026-06-10-pipeline-autorun-after-save-design.md  2026-06-12-remove-uploaded-words-from-csv-design.md  2026-06-13-tui-frequency-bar-design.md
nextword/: app.py  cli.py  db.py
nextword/cards/: client.py  pipeline.py  prompt.py  schema.py
nextword/mochi/: client.py  upload.py
tests/: conftest.py  test_app.py  test_cards_client.py  test_cards_pipeline.py  test_cards_prompt.py  test_cards_schema.py  test_cli.py  test_db.py  test_mochi.py
